--- a/springapp/src/main/resources/application.properties
+++ b/springapp/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.url=jdbc:mysql://localhost:3306/kryptoparty
 spring.datasource.username=root
 spring.datasource.password=examly
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
